--- a/BodegaMovil/App.xaml
+++ b/BodegaMovil/App.xaml
@@ -3,13 +3,17 @@
     x:Class="BodegaMovil.App"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:converters="clr-namespace:BodegaMovil.Converters"
     xmlns:local="clr-namespace:BodegaMovil">
+    <!--  se agregó para el boolToColorconverter  -->
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Resources/Styles/Colors.xaml" />
                 <ResourceDictionary Source="Resources/Styles/Styles.xaml" />
             </ResourceDictionary.MergedDictionaries>
+            <converters:BoolToColorConverter x:Key="BoolToColorConverter" />
+            <!--  se agrego  -->
         </ResourceDictionary>
     </Application.Resources>
 </Application>
