--- a/BodegaMovil/Views/ListaArticulosPage.xaml
+++ b/BodegaMovil/Views/ListaArticulosPage.xaml
@@ -19,17 +19,30 @@
             Text=""
             WidthRequest="1" />
 
-        <Grid 
-            ColumnDefinitions="Auto,Auto,Auto" 
-            ColumnSpacing="10" 
-            VerticalOptions="Center" 
+        <Grid
+            Grid.Row="0"
+            Margin="2"
+            Padding="2"
+            ColumnDefinitions="Auto,Auto,Auto"
+            ColumnSpacing="10"
             HorizontalOptions="Center"
-            Grid.Row="0" 
-            Padding="2" 
-            Margin="2">
-            <Label Grid.Column="0" Text="{Binding Pedido.Folio}" VerticalOptions="Start" FontAttributes="Bold" TextColor="DarkBlue"/>
-            <Label Grid.Column="1" Text = "{Binding Pedido.DescripcionTienda}" FontSize="Small" TextColor="DarkBlue"/>
-            <Label Grid.Column="2" Text = "{Binding Pedido.DescripcionArea}" FontSize="Small" TextColor="DarkBlue"/>
+            VerticalOptions="Center">
+            <Label
+                Grid.Column="0"
+                FontAttributes="Bold"
+                Text="{Binding Pedido.Folio}"
+                TextColor="DarkBlue"
+                VerticalOptions="Start" />
+            <Label
+                Grid.Column="1"
+                FontSize="Small"
+                Text="{Binding Pedido.DescripcionTienda}"
+                TextColor="DarkBlue" />
+            <Label
+                Grid.Column="2"
+                FontSize="Small"
+                Text="{Binding Pedido.DescripcionArea}"
+                TextColor="DarkBlue" />
         </Grid>
         <!--  Encabezado con botón de regreso mejorado  -->
         <Grid
@@ -37,8 +50,9 @@
             Margin="2"
             Padding="2"
             ColumnDefinitions=" Auto, Auto"
-            ColumnSpacing="18" 
-            VerticalOptions="Center" HorizontalOptions="Center">
+            ColumnSpacing="18"
+            HorizontalOptions="Center"
+            VerticalOptions="Center">
 
             <!--<VerticalStackLayout HorizontalOptions="Center" Grid.Column="0">
                 <Label Text = "{Binding Pedido.DescripcionTienda}" FontSize="Small"/>
@@ -60,10 +74,10 @@
                 BackgroundColor="DodgerBlue"
                 Command="{Binding BuscarArticuloCommand}"
                 CornerRadius="10"
-                HeightRequest="40"
-                Text="+"
                 FontAttributes="Bold"
                 FontSize="18"
+                HeightRequest="40"
+                Text="+"
                 TextColor="White"
                 WidthRequest="50" />
 
@@ -164,11 +178,11 @@
                         Source="remove_selection_white.png"
                         WidthRequest="40" />
                     <VerticalStackLayout HorizontalOptions="Center">
-                        <Label Text="{Binding TituloListaArts}" VerticalOptions="Center"/>
-                        <Switch 
-                        IsToggled="{Binding MostrarArtsSurtidos}"
-                        OnColor="Green"
-                        ThumbColor="Red" />
+                        <Label Text="{Binding TituloListaArts}" VerticalOptions="Center" />
+                        <Switch
+                            IsToggled="{Binding MostrarArtsSurtidos}"
+                            OnColor="Green"
+                            ThumbColor="Red" />
                     </VerticalStackLayout>
                 </HorizontalStackLayout>
                 <HorizontalStackLayout Grid.Column="1" Spacing="-8">
